[tool.poetry]
name = "snatch"
version = "0.1.0"
description = ""
authors = ["soerface <soerface@flipdot.org>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
redis = "^5.0.0"
uvicorn = "^0.24.0"
pre-commit = "^3.3.3"
sentry-sdk = "^1.37.1"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
freezegun = "^1.2.2"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
