[tool.poetry]
name = "snatch"
version = "0.1.0"
description = ""
authors = ["soerface <soerface@flipdot.org>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
redis = "^5.0.0"
uvicorn = "^0.29.0"
pre-commit = "^3.3.3"
sentry-sdk = "^2.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
freezegun = "^1.2.2"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
